# rise_set

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG  INSTALL  README  README.md  devenv.nix  example_rise_set.py  flake.nix  pylintrc  pylintrc.tests  pyproject.toml  requirements.pip  setup.py  sonar-project.properties  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yaml
docs/: conf.py  documentation.rst  index.rst  requirements.txt
examples/: airmass_example.py  visibility_example.py
rise_set/: angle.py  astrometry.py  darkness.py  declination.py  exceptions.py  logging.conf  moving_objects.py  observation_window_overlap.py  rates.py  refactored_observation_window_overlap.py  rightAscension.py  sky_coordinates.py  telescope.py  tmp.py  transits.py  utils.py  visibility.py
rise_set/scripts/: convert.py  darkness.py
rise_set/test/: angle_test.py  astrometry_test.py  nosey_test.py  rates_test.py  sky_coordinates_test.py  telescope_test.py  visibility_test.py
scripts/: ra2deg.py  refactored_observation_window_overlap.py  sunrise.py
test/: 00001_Ceres.neocp  2013TL117.neocp  Comet_299P.neocp  Comet_SidingSpring.neocp  LSCTLF3.neocp  LSCTLF3_V2.neocp  N007rdx.neocp  P109rXK.neocp  angle_test.py  astrometry_test.py  moving_objects_test.py  nosey_test.py  rates_test.py  sky_coordinates_test.py  special_neo_target.neocp  test_utils.py  visibility_test.py
