[tool.poetry]
name = "ocs-rise-set"
version = "0.6.5"
description = "Routines for accurate rise/set/transit calculations"
authors = ["Eric Saunders <esaunders@lcogt.net>"]
readme = "README.md"
packages = [{include = "rise_set"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
future = "^0.18.3"
pyslalib = "^1.0.10"
healpy = ">=1.15"

[tool.poetry.group.dev.dependencies]
mock = "^5.0.1"
coverage = "^7.2.3"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

